Adjust x64 build paths

--- a/PowerEditor/visual.net/notepadPlus.vcxproj
+++ b/PowerEditor/visual.net/notepadPlus.vcxproj
@@ -76,7 +76,9 @@
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|x64'">
-    <LinkIncremental>false</LinkIncremental>
+    <OutDir>x64\$(Configuration)\</OutDir>
+    <IntDir>x64\$(Configuration)\</IntDir>
+  <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">
     <OutDir>..\bin\</OutDir>
@@ -84,6 +86,8 @@
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Release|x64'">
+    <OutDir>..\bin64\</OutDir>
+    <IntDir>x64\$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">
@@ -245,12 +249,12 @@ copy ..\src\fonts\sourceCodePro\SourceCodePro-Regular.otf ..\bin\SourceCodePro-R
       <AdditionalManifestFiles>..\src\dpiAware.manifest;%(AdditionalManifestFiles)</AdditionalManifestFiles>
     </Manifest>
     <PostBuildEvent>
-      <Command>copy ..\src\config.model.xml ..\bin\config.model.xml
-copy ..\src\langs.model.xml ..\bin\langs.model.xml
-copy ..\src\stylers.model.xml ..\bin\stylers.model.xml
-copy ..\src\shortcuts.xml ..\bin\shortcuts.xml
-copy ..\src\functionList.xml ..\bin\functionList.xml
-copy ..\src\contextMenu.xml ..\bin\contextMenu.xml
+      <Command>copy ..\src\config.model.xml ..\bin64\config.model.xml
+copy ..\src\langs.model.xml ..\bin64\langs.model.xml
+copy ..\src\stylers.model.xml ..\bin64\stylers.model.xml
+copy ..\src\shortcuts.xml ..\bin64\shortcuts.xml
+copy ..\src\functionList.xml ..\bin64\functionList.xml
+copy ..\src\contextMenu.xml ..\bin64\contextMenu.xml
 ..\misc\vistaIconTool\changeIcon.bat "..\misc\vistaIconTool\ChangeIcon.exe" "$(OutDir)notepad++.exe"
 </Command>
     </PostBuildEvent>
