[MODIF] Remove settings on cloud dependency
This feature got a lot of regression due to its dependency on dropbox,
google drive and one drive implementation. This modification removes
such dependecy and allow users to set their settings location - any
cloud location path and even customized local location.

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -380,9 +380,9 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     GROUPBOX        "Settings on cloud",IDC_SETTINGSONCLOUD_GB_STATIC,89,44,268,89,BS_CENTER
     CONTROL         "No Cloud",IDC_NOCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,57,92,10
-    CONTROL         "Dropbox",IDC_DROPBOX_RADIO,"Button",BS_AUTORADIOBUTTON,125,72,92,10
-    CONTROL         "OneDrive",IDC_ONEDRIVE_RADIO,"Button",BS_AUTORADIOBUTTON,125,87,92,10
-    CONTROL         "Google Drive",IDC_GOOGLEDRIVE_RADIO,"Button",BS_AUTORADIOBUTTON,125,102,92,10
+    CONTROL         "Set your cloud location path here:",IDC_WITHCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,72,180,10
+	EDITTEXT        IDC_CLOUDPATH_EDIT,134,88,179,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDD_CLOUDPATH_BROWSE_BUTTON,320,87,16,14
     LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,131,117,135,8
 END
 
