[ENHANCEMENT] Make smooth font optional
The old behaviour enabled smooth font and it didn't allow user to change
this setting. The new behaviour makes it optional and turn it off by
default.

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -80,41 +80,40 @@ IDD_PREFERENCE_MARGEIN_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Folder Margin Style",IDC_FMS_GB_STATIC,46,54,83,89,BS_CENTER
-    CONTROL         "Simple",IDC_RADIO_SIMPLE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,55,67,59,10
-    CONTROL         "Arrow",IDC_RADIO_ARROW,"Button",BS_AUTORADIOBUTTON,55,81,60,10
-    CONTROL         "Circle tree",IDC_RADIO_CIRCLE,"Button",BS_AUTORADIOBUTTON,55,96,62,10
-    CONTROL         "None",IDC_RADIO_FOLDMARGENONE,"Button",BS_AUTORADIOBUTTON,55,125,61,10
-    CONTROL         "Box tree",IDC_RADIO_BOX,"Button",BS_AUTORADIOBUTTON,55,110,61,10
-    CONTROL         "Display line number",IDC_CHECK_LINENUMBERMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,117,141,10
-    CONTROL         "Display bookmark",IDC_CHECK_BOOKMARKMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,130,150,10
-    CONTROL         "Enable current line highlighting",IDC_CHECK_CURRENTLINEHILITE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,143,129,10
-    CONTROL         "Show vertical edge",IDC_CHECK_SHOWVERTICALEDGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,153,66,122,10
-    RTEXT           "Number of columns :",IDC_NBCOLONE_STATIC,148,114,83,8
-    LTEXT           "0",IDC_COLONENUMBER_STATIC,238,113,18,8,WS_TABSTOP
-    GROUPBOX        "Vertical Edge Settings",IDC_VES_GB_STATIC,142,54,148,77,BS_CENTER
-    CONTROL         "Line mode",IDC_RADIO_LNMODE,"Button",BS_AUTORADIOBUTTON,156,82,91,10
-    CONTROL         "Background mode",IDC_RADIO_BGMODE,"Button",BS_AUTORADIOBUTTON,156,96,91,10
-    GROUPBOX        "Caret Settings",IDC_CARETSETTING_STATIC,46,11,199,40,BS_CENTER
-    LTEXT           "Width :",IDC_WIDTH_STATIC,50,30,37,8,0,WS_EX_RIGHT
-    COMBOBOX        IDC_WIDTH_COMBO,89,28,40,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Blink rate :",IDC_BLINKRATE_STATIC,161,23,50,8
-    CONTROL         "",IDC_CARETBLINKRATE_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,35,67,13
-    LTEXT           "S",IDC_CARETBLINKRATE_S_STATIC,225,35,12,8
-    LTEXT           "F",IDC_CARETBLINKRATE_F_STATIC,144,35,12,8,0,WS_EX_RIGHT
-    GROUPBOX        "Multi-Editing Settings",IDC_MULTISELECTION_GB_STATIC,253,11,140,40,BS_CENTER
+    GROUPBOX        "Folder Margin Style",IDC_FMS_GB_STATIC,46,44,83,89,BS_CENTER
+    CONTROL         "Simple",IDC_RADIO_SIMPLE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,55,57,59,10
+    CONTROL         "Arrow",IDC_RADIO_ARROW,"Button",BS_AUTORADIOBUTTON,55,71,60,10
+    CONTROL         "Circle tree",IDC_RADIO_CIRCLE,"Button",BS_AUTORADIOBUTTON,55,86,62,10
+    CONTROL         "None",IDC_RADIO_FOLDMARGENONE,"Button",BS_AUTORADIOBUTTON,55,115,61,10
+    CONTROL         "Box tree",IDC_RADIO_BOX,"Button",BS_AUTORADIOBUTTON,55,100,61,10
+    CONTROL         "Show vertical edge",IDC_CHECK_SHOWVERTICALEDGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,153,56,122,10
+    RTEXT           "Number of columns :",IDC_NBCOLONE_STATIC,148,104,83,8
+    LTEXT           "0",IDC_COLONENUMBER_STATIC,238,103,18,8,WS_TABSTOP
+    GROUPBOX        "Vertical Edge Settings",IDC_VES_GB_STATIC,142,44,148,77,BS_CENTER
+    CONTROL         "Line mode",IDC_RADIO_LNMODE,"Button",BS_AUTORADIOBUTTON,156,72,91,10
+    CONTROL         "Background mode",IDC_RADIO_BGMODE,"Button",BS_AUTORADIOBUTTON,156,86,91,10
+    GROUPBOX        "Caret Settings",IDC_CARETSETTING_STATIC,46,1,199,40,BS_CENTER
+    LTEXT           "Width :",IDC_WIDTH_STATIC,50,20,37,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_WIDTH_COMBO,89,18,40,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Blink rate :",IDC_BLINKRATE_STATIC,161,13,50,8
+    CONTROL         "",IDC_CARETBLINKRATE_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,25,67,13
+    LTEXT           "S",IDC_CARETBLINKRATE_S_STATIC,225,25,12,8
+    LTEXT           "F",IDC_CARETBLINKRATE_F_STATIC,144,25,12,8,0,WS_EX_RIGHT
+    GROUPBOX        "Multi-Editing Settings",IDC_MULTISELECTION_GB_STATIC,253,1,140,40,BS_CENTER
     CONTROL         "Enable (Ctrl+Mouse click/selection)",IDC_CHECK_MULTISELECTION,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,261,28,130,10
-    GROUPBOX        "Line Wrap",IDC_LW_GB_STATIC,301,54,92,56,BS_CENTER
-    CONTROL         "Default",IDC_RADIO_LWDEF,"Button",BS_AUTORADIOBUTTON | WS_GROUP,311,67,59,10
-    CONTROL         "Aligned",IDC_RADIO_LWALIGN,"Button",BS_AUTORADIOBUTTON,311,81,60,10
-    CONTROL         "Indent",IDC_RADIO_LWINDENT,"Button",BS_AUTORADIOBUTTON,311,95,62,10
-    GROUPBOX        "Border Width",IDC_BORDERWIDTH_STATIC,142,132,148,30,BS_CENTER
-    CONTROL         "",IDC_BORDERWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,145,67,13
-    LTEXT           "0",IDC_BORDERWIDTHVAL_STATIC,225,145,12,8
-	CONTROL         "Disable advanced scrolling feature\r(if you have touchpad problem)",IDC_CHECK_DISABLEADVANCEDSCROLL,
-	"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,298,153,139,18
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,261,18,130,10
+    GROUPBOX        "Line Wrap",IDC_LW_GB_STATIC,301,44,92,56,BS_CENTER
+    CONTROL         "Default",IDC_RADIO_LWDEF,"Button",BS_AUTORADIOBUTTON | WS_GROUP,311,57,59,10
+    CONTROL         "Aligned",IDC_RADIO_LWALIGN,"Button",BS_AUTORADIOBUTTON,311,71,60,10
+    CONTROL         "Indent",IDC_RADIO_LWINDENT,"Button",BS_AUTORADIOBUTTON,311,85,62,10
+    GROUPBOX        "Border Width",IDC_BORDERWIDTH_STATIC,142,122,148,30,BS_CENTER
+    CONTROL         "",IDC_BORDERWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,135,67,13
+    LTEXT           "0",IDC_BORDERWIDTHVAL_STATIC,225,135,12,8
+    CONTROL         "Display line number",IDC_CHECK_LINENUMBERMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,107,141,10
+    CONTROL         "Display bookmark",IDC_CHECK_BOOKMARKMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,120,150,10
+    CONTROL         "Enable current line highlighting",IDC_CHECK_CURRENTLINEHILITE,  "Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,133,129,10
+    CONTROL         "Enable smooth font",IDC_CHECK_SMOOTHFONT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,146,129,10
+    CONTROL         "Disable advanced scrolling feature\r(if you have touchpad problem)",IDC_CHECK_DISABLEADVANCEDSCROLL, "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,298,159,139,18
 END
 
 IDD_PREFERENCE_SETTING_BOX DIALOGEX 0, 0, 455, 185
