[UPDATE] Update gitIgnore file

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@ scintilla/cppcheck.suppress
 scintilla/.hg_archival.txt
 scintilla/.hgignore
 scintilla/bin/__init__.py
+PowerEditor/bin/NppShell64_06.dll
+PowerEditor/bin/NppShell_06.dll
