--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -518,10 +518,10 @@ BEGIN
     POPUP "E&ncoding"
     BEGIN
         MENUITEM "Encode in ANSI",                    IDM_FORMAT_ANSI
-        MENUITEM "Encode in UTF-8 without BOM",       IDM_FORMAT_AS_UTF_8
-        MENUITEM "Encode in UTF-8",                   IDM_FORMAT_UTF_8
-        MENUITEM "Encode in UCS-2 Big Endian",        IDM_FORMAT_UCS_2BE
-        MENUITEM "Encode in UCS-2 Little Endian",     IDM_FORMAT_UCS_2LE
+        MENUITEM "Encode in UTF-8",                   IDM_FORMAT_AS_UTF_8
+        MENUITEM "Encode in UTF-8-BOM",               IDM_FORMAT_UTF_8
+        MENUITEM "Encode in UCS-2 BE BOM",            IDM_FORMAT_UCS_2BE
+        MENUITEM "Encode in UCS-2 LE BOM",            IDM_FORMAT_UCS_2LE
         POPUP "Character sets"
         BEGIN
             POPUP "Arabic"
@@ -636,11 +636,11 @@ BEGIN
             END
         END
         MENUITEM SEPARATOR
-        MENUITEM "Convert to ANSI",                   IDM_FORMAT_CONV2_ANSI
-        MENUITEM "Convert to UTF-8 without BOM",      IDM_FORMAT_CONV2_AS_UTF_8
-        MENUITEM "Convert to UTF-8",                  IDM_FORMAT_CONV2_UTF_8
-        MENUITEM "Convert to UCS-2 Big Endian",       IDM_FORMAT_CONV2_UCS_2BE
-        MENUITEM "Convert to UCS-2 Little Endian",    IDM_FORMAT_CONV2_UCS_2LE
+        MENUITEM "Convert to ANSI",            IDM_FORMAT_CONV2_ANSI
+        MENUITEM "Convert to UTF-8",           IDM_FORMAT_CONV2_AS_UTF_8
+        MENUITEM "Convert to UTF-8-BOM",       IDM_FORMAT_CONV2_UTF_8
+        MENUITEM "Convert to UCS-2 BE BOM",    IDM_FORMAT_CONV2_UCS_2BE
+        MENUITEM "Convert to UCS-2 LE BOM",    IDM_FORMAT_CONV2_UCS_2LE
     END
 
     POPUP "&Language"
