--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,8 @@ scintilla/.hgignore
 scintilla/bin/__init__.py
 PowerEditor/bin/NppShell64_06.dll
 PowerEditor/bin/NppShell_06.dll
+
+PowerEditor/bin/SourceCodePro-Bold.ttf
+PowerEditor/bin/SourceCodePro-BoldIt.ttf
+PowerEditor/bin/SourceCodePro-It.ttf
+PowerEditor/bin/SourceCodePro-Regular.ttf
